# oficina_mecanica

./: CMakeLists.txt  README.md  main.c
Controller/: agendamentoController.c  caixaController.c  clienteController.c  comissaoController.c  contaPagarController.c  contaReceberController.c  estoqueController.c  fornecedorController.c  funcionarioController.c  importacaoExportacaoController.c  oficinaController.c  ordemServicoController.c  pecaController.c  servicoController.c  transacaoController.c  veiculoController.c
Model/: modelAgendamento.c  modelCaixa.c  modelCliente.c  modelComissao.c  modelContaPagar.c  modelContaReceber.c  modelEstoque.c  modelFornecedor.c  modelFuncionario.c  modelOficina.c  modelOrdemServico.c  modelPeca.c  modelServico.c  modelTransacao.c  modelVeiculo.c
Utils/: util.c
View/: agendamentoView.c  clienteView.c  comissaoView.c  contaPagarView.c  contaReceberView.c  estoqueView.c  fornecedorView.c  funcionarioView.c  importacaoExportacaoView.c  oficinaView.c  ordemServicoView.c  pecaView.c  servicoView.c  transacaoView.c  veiculoView.c
bd/: clientes.txt  fornecedores.txt
bibliotecas/: Modulo2.h  caixa.h  cliente.h  estoque.h  fornecedor.h  funcionario.h  importacaoExportacao.h  moduloTransacao.h  oficina.h  peca.h  servico.h  utils.h  veiculo.h
