cmake_minimum_required(VERSION 3.29)
project(trabalho C)

set(CMAKE_C_STANDARD 11)

add_executable(trabalho main.c
        Model/modelCliente.c
        Utils/util.c
        bibliotecas/utils.h
        bibliotecas/cliente.h
        Controller/clienteController.c
        View/clienteView.c
        Model/modelFornecedor.c
        Model/modelFornecedor.c
        bibliotecas/fornecedor.h
        Controller/fornecedorController.c
        Controller/fornecedorController.c
        View/fornecedorView.c
        View/fornecedorView.c
        bibliotecas/peca.h
        Controller/pecaController.c
        Model/modelPeca.c
        View/pecaView.c
        bibliotecas/oficina.h
        Controller/oficinaController.c
        Model/modelOficina.c
        View/oficinaView.c
        View/fornecedorView.c
        View/veiculoView.c
        View/funcionarioView.c
        View/veiculoView.c
        Model/modelVeiculo.c
        Model/modelFuncionario.c
        Controller/veiculoController.c
        Controller/funcionarioController.c
        bibliotecas/servico.h
        bibliotecas/servico.h
        Controller/servicoController.c
        Model/modelServico.c
        View/servicoView.c
        bibliotecas/caixa.h
        bibliotecas/caixa.h
        Controller/caixaController.c
        Model/modelCaixa.c
        Model/modelTransacao.c
        Model/modelTransacao.c
        Controller/transacaoController.c
        View/transacaoView.c
        Controller/contaPagarController.c
        Model/modelContaPagar.c
        View/contaPagarView.c
        Controller/contaReceberController.c
        Model/modelContaReceber.c
        Model/modelContaReceber.c
        View/contaReceberView.c
        View/estoqueView.c
        View/estoqueView.c
        Controller/estoqueController.c
        Model/modelEstoque.c
        Model/modelEstoque.c
        Controller/importacaoExportacaoController.c
        Controller/importacaoExportacaoController.c
        View/importacaoExportacaoView.c
        bibliotecas/importacaoExportacao.h
        Controller/agendamentoController.c
        Model/modelAgendamento.c
        View/agendamentoView.c
        Controller/ordemServicoController.c
        Model/modelOrdemServico.c
        View/ordemServicoView.c
        bibliotecas/Modulo2.h
        Controller/comissaoController.c
        Model/modelComissao.c
        View/comissaoView.c
)
